k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actia-engineering
  labels:
    name: actia-engineering
